# Starter

./: CMakeLists.txt  README.md  main.cpp
ArgParse/: ArgumentParser.h  TypeUtils.h
Bicycle/Win/Common/: Global.h
Bicycle/Win/Fs/: File.h  Path.h
Bicycle/Win/Process/: Environment.cpp  Process.cpp  Process.h
